@@ -1,8 +1,9 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=DevHelp
 _Comment=Developers Help program
 Exec=devhelp-2
-Terminal=0
+Terminal=false
 Type=Application
 Icon=devhelp.png
-
+Categories=GNOME;Application;Development;
